# advent_of_code

./: README.md
advent2024/: advent2024.opam  dune-project
advent2024/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day17.ml  day18.ml  day19.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune  priority_queue.ml  utils.ml
advent2025/: advent2025.opam  dune-project
advent2025/lib/: aoc.ml  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  dune  functions.ml  types.ml  utils.ml
advent2025/lib/utils/: coordinates.ml  dune  grid.ml  input.ml  io.ml  list.ml  memo.ml  operators.ml  pair.ml  sequence.ml  string.ml
advent2025/test/: calendar.ml  dune
advent2025/test/day01/: day01.ml  dune
advent2025/test/day02/: day02.ml  dune
advent2025/test/day03/: day03.ml  dune
advent2025/test/working/: day.ml  dune
