(lang dune 3.20)

(name advent2025)

(generate_opam_files true)

(source
 (github joefarchione/advent_of_code))

(authors "Joe Farchione <jfarchione@gmail.com>")

(package
 (name advent2025)
 (synopsis "Advent of Code solutions in OCaml")
 (depends
  ocaml
  str
  re
  ppx_expect
  pcre2
  lp
  lp-glpk
  ppx_jane
  ppx_inline_test
  ppx_expect))
